@@ -27,10 +27,13 @@
 // of the version of rational in LEDA release 3.3.
 // The modification was done by Stefan.Schirra@mpi-sb.mpg.de
 
+// The include is done before the protect macro on purpose, because
+// of a cyclic dependency.
+#include <CGAL/basic.h>
+
 #ifndef CGAL_QUOTIENT_H
 #define CGAL_QUOTIENT_H
 
-#include <CGAL/basic.h>
 #include <utility>
 
 #ifndef CGAL_CFG_NO_LOCALE
